--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "webpack": "5.12.0",
     "webpack-cli": "4.9.1",
     "webpack-dev-server": "3.11.2"
+  },
+  "dependencies": {
+    "captcha-mini": "^1.1.0"
   }
 }
