--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack-dev-server": "3.11.2"
   },
   "dependencies": {
-    "captcha-mini": "^1.1.0"
+    "captcha-mini": "^1.1.0",
+    "swiper": "^8.2.2"
   }
 }
