--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "captcha-mini": "^1.1.0"
+    "captcha-mini": "^1.1.0",
+    "echarts": "^5.3.2"
   }
 }
